--- a/.github/workflows/netlify-daily.yml
+++ b/.github/workflows/netlify-daily.yml
@@ -3,8 +3,8 @@
 name: Netlify - Daily run
 
 on:
-  schedule:
-    - cron:  '55 23 * * *'
+  # schedule:
+  #   - cron:  '55 23 * * *'
   workflow_dispatch:
     
 
